# 6502-emu

./: CMakeLists.txt  README.md
doc/: gen_func_sig.py  gen_list.py  opcodes.csv  opcodes.txt  oplist.csv  oplist.tsv  oplist_ordered.csv  output_bind.txt  output_def.txt  output_sig.txt
include/: alu.hxx  base.hxx  mem.hxx  processor.hxx  reg.hxx
src/: alu.cxx  main.cxx  mem.cxx  processor.cxx  reg.cxx
test/: CMakeLists.txt  main.cxx  test_alu.cxx  test_mem.cxx
